--- a/Project_Walkthrough.ipynb
+++ b/Project_Walkthrough.ipynb
@@ -12,6 +12,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,7 +94,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We obtained a repository of chest x-ray images "
+    "We obtained a repository of chest x-ray images from [Kaggle](https://www.kaggle.com/paultimothymooney/chest-xray-pneumonia) which contains 5,856 chest x-ray images. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5856"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index_df = pd.read_csv('data/image_index_dtl.csv')\n",
+    "index_df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of these images, approximately 4,200 of them are images of lungs with viral or bacterial pneumonia, and the other 1,600 do not have pneumonia. One potential challenge with the images of pneumonia is the fact that bacterial and viral pneumonia manifest themselves in different ways."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    4273\n",
+       "0    1583\n",
+       "Name: condition, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index_df.condition.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src='images/CXRimages.png' width=400></center>"
    ]
   },
   {
