--- a/notebooks/YHJ/nn_model_prototypes.ipynb
+++ b/notebooks/YHJ/nn_model_prototypes.ipynb
@@ -770,18 +770,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "this model reduces loss to 0 in about ~100 iterations"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "save_path = r\""
+   ]
   },
   {
    "cell_type": "code",
