--- a/notebooks/YHJ/nn_model_prototypes.ipynb
+++ b/notebooks/YHJ/nn_model_prototypes.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overview"
+    "# Overview\n",
+    "\n",
+    "In this notebook a simple sequential linear model will be buitl using pytorch neural network module. The model and input data will be pushed to a CUDA device for quick calculation. "
    ]
   },
   {
@@ -142,33 +144,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_dummy = pd.get_dummies(index_df.condition)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 560,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_dummy.columns = [\"negative\", \"positive\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 561,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index_df = pd.concat([index_df, result_dummy], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 562,
    "metadata": {},
    "outputs": [
@@ -293,16 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = train_df[[\"img\",\"condition\", \"negative\", \"positive\"]].sample(30, random_state = 42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 707,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_true_one_hot = torch.tensor(train_data[[\"negative\", \"positive\"]].values).float()"
+    "train_data = train_df[[\"img\",\"condition\"]].sample(30, random_state = 42)"
    ]
   },
   {
@@ -341,55 +307,6 @@
    ],
    "source": [
     "y_true.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 711,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0., 1.],\n",
-       "        [1., 0.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [1., 0.],\n",
-       "        [1., 0.],\n",
-       "        [1., 0.],\n",
-       "        [1., 0.],\n",
-       "        [0., 1.],\n",
-       "        [1., 0.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [1., 0.],\n",
-       "        [0., 1.],\n",
-       "        [1., 0.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [1., 0.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [0., 1.],\n",
-       "        [1., 0.],\n",
-       "        [1., 0.],\n",
-       "        [1., 0.]])"
-      ]
-     },
-     "execution_count": 711,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_true_one_hot"
    ]
   },
   {
@@ -440,7 +357,9 @@
   {
    "cell_type": "code",
    "execution_count": 679,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -462,54 +381,6 @@
    ],
    "source": [
     "input_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Second Linear Prototype with Flattened Tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 712,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class linear_prototype2(nn.Module):\n",
-    "    def __init__(self, img_h, img_w):\n",
-    "        super().__init__()\n",
-    "        #define sizes here\n",
-    "        self.h = img_h\n",
-    "        self.w = img_w\n",
-    "        self.longshape = img_h*img_w\n",
-    "        self.linear1 = nn.Linear(self.longshape, 320)\n",
-    "        self.relu1 = nn.ReLU()\n",
-    "        self.linear2 = nn.Linear(320, 2)\n",
-    "        #self.softmax = nn.Softmax(dim=1)\n",
-    "        self.termn_act = nn.Sigmoid()\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        # preprocess the input image\n",
-    "        x = self.preprocess_image_flat(x)\n",
-    "        #============ Layer1==============#\n",
-    "        x = self.linear1(x)\n",
-    "        x = self.relu1(x)\n",
-    "        #============Layer2==============#\n",
-    "        x = self.linear2(x)\n",
-    "        x = self.termn_act(x)\n",
-    "        return x\n",
-    "    \n",
-    "    ## update this to sequential?\n",
-    "    def preprocess_image_flat(self, path):\n",
-    "        resizer = TF.Resize((self.h, self.w)) #define resizer per new_h and new_w\n",
-    "        im = tv.io.read_image(path).type(torch.float) #read image as pytorch float tensor\n",
-    "        im = resizer(im) #resize image\n",
-    "        normalizer = TF.Normalize(im.mean(), im.std()) #initialize normalizer\n",
-    "        im = normalizer(im) # return normalized pytorch float tensor\n",
-    "        im = torch.flatten(im)\n",
-    "        return im.clone().detach().requires_grad_(True)"
    ]
   },
   {
@@ -671,36 +542,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-741-7ca7095efd5d>, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-741-7ca7095efd5d>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    true_positives = sum(1 if (true[] == 1 and pred == 1) else 0 for true, pred in answers)\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "def recall_loss(y_true, y_pred):\n",
-    "    \"\"\"\n",
-    "    y_true shape = observation, 2 (negative, positve)\n",
-    "    y_pred shape = observation, 2 (negative, positive) but in posibilities\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    answers = list(zip(y_true, y_pred))\n",
-    "    true_positives = sum(1 if (true[] == 1 and pred == 1) else 0 for true, pred in answers)\n",
-    "    false_negatives = sum(1 if (true == 1 and pred == 0) else 0 for true, pred in answers)\n",
-    "    return torch.tensor(1 - (true_positives/(true_positives + false_negatives)))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 742,
    "metadata": {},
    "outputs": [],
@@ -778,11 +619,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 744,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = r\""
+    "save_path = \"../../models/pneumonia_simple_01.pt\"\n",
+    "torch.save(model.state_dict(), save_path)"
    ]
   },
   {
@@ -852,6 +694,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
+    "## Old Model Iteration\n",
+    "\n",
+    "These are saved for future reference and/or troubleshooting\n",
+    "\n",
     "***\n"
    ]
   },
@@ -950,7 +797,7 @@
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -966,6 +813,15 @@
    ],
    "source": [
     "y_pred.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First Model Optimizer\n",
+    "\n",
+    "Runs into tensor placement errors"
    ]
   },
   {
@@ -996,6 +852,52 @@
     "            for param in model.parameters():\n",
     "                if param.grad is not None:\n",
     "                    param += learning_rate * param.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Second Linear Prototype with Flattened Tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 712,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class linear_prototype2(nn.Module):\n",
+    "    def __init__(self, img_h, img_w):\n",
+    "        super().__init__()\n",
+    "        #define sizes here\n",
+    "        self.h = img_h\n",
+    "        self.w = img_w\n",
+    "        self.longshape = img_h*img_w\n",
+    "        self.linear1 = nn.Linear(self.longshape, 320)\n",
+    "        self.relu1 = nn.ReLU()\n",
+    "        self.linear2 = nn.Linear(320, 2)\n",
+    "        self.softmax = nn.Softmax(dim=1)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        # preprocess the input image\n",
+    "        x = self.preprocess_image_flat(x)\n",
+    "        #============ Layer1==============#\n",
+    "        x = self.linear1(x)\n",
+    "        x = self.relu1(x)\n",
+    "        #============Layer2==============#\n",
+    "        x = self.linear2(x)\n",
+    "        return x\n",
+    "    \n",
+    "    ## update this to sequential?\n",
+    "    def preprocess_image_flat(self, path):\n",
+    "        resizer = TF.Resize((self.h, self.w)) #define resizer per new_h and new_w\n",
+    "        im = tv.io.read_image(path).type(torch.float) #read image as pytorch float tensor\n",
+    "        im = resizer(im) #resize image\n",
+    "        normalizer = TF.Normalize(im.mean(), im.std()) #initialize normalizer\n",
+    "        im = normalizer(im) # return normalized pytorch float tensor\n",
+    "        im = torch.flatten(im)\n",
+    "        return im.clone().detach().requires_grad_(True)"
    ]
   }
  ],
