added new models

--- a/notebooks/sequential_model_optimize.ipynb
+++ b/notebooks/sequential_model_optimize.ipynb
@@ -265,7 +265,7 @@
    ],
    "source": [
     "# import model\n",
-    "linear_model = sl_model.linear_prototype3(img_reduce_h, img_reduce_w)\n",
+    "linear_model = sl_model.linear_prototype(img_reduce_h, img_reduce_w)\n",
     "linear_model.to(device) #send to CUDA!"
    ]
   },
@@ -486,13 +486,6 @@
     "save_path = \"../models/pneumonia_simple_decay_02.pt\"\n",
     "torch.save(linear_model.state_dict(), save_path)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
